feat: add contact API
